New idea, works. Running 2.1 MHz on Zynq

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,6 +4,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # Update + essential build tools
 RUN apt-get update && apt-get install -y \
+    file \
     build-essential \
     cmake \
     ninja-build \
